Add test JVM options to configure (enable) Apache Geode to run on Java 17.